Add basic content to the site header

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,28 @@
     <script src="../js/main.js" defer></script>
   </head>
   <body>
-    <h1>Maya Chen</h1>
+    <header class="site-header">
+      <div class="container header-content">
+        <!-- Profile -->
+        <a href="index.html" class="profile">
+          <span>Maya Chen</span>
+        </a>
+
+        <!-- Navigation -->
+        <nav class="site-nav">
+          <ul>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+
+        <!-- Theme button -->
+        <div class="header-action">
+          <button>Light</button>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
