Add basic styles to the site header

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
     <script src="../js/main.js" defer></script>
   </head>
   <body>
+    <!-- Header -->
     <header class="site-header">
       <div class="container header-content">
         <!-- Profile -->
         <a href="index.html" class="profile">
-          <span>Maya Chen</span>
+          <span class="fullname">Maya Chen</span>
         </a>
 
         <!-- Navigation -->
@@ -23,15 +24,18 @@
             <li><a href="#">Projects</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" class="btn">Contact</a></li>
           </ul>
         </nav>
 
         <!-- Theme button -->
         <div class="header-action">
-          <button>Light</button>
+          <button class="btn">Light</button>
         </div>
       </div>
     </header>
+
+    <!-- Main -->
+    <main></main>
   </body>
 </html>
