Add basic content and styles to the profile part of the hero section

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <!-- Header -->
     <header class="site-header">
       <div class="container header-content">
-        <!-- Profile -->
-        <a href="index.html" class="profile">
+        <!-- Branding -->
+        <a href="index.html" class="branding">
           <span class="fullname">Maya Chen</span>
         </a>
 
@@ -36,6 +36,51 @@
     </header>
 
     <!-- Main -->
-    <main></main>
+    <main>
+      <!-- Hero -->
+      <section class="hero">
+        <div class="container hero-content">
+          <!-- Summary (left panel) -->
+          <article class="profile">
+            <p class="subtitle">Software Engineer • Frontend + Product-minded</p>
+            <h1>I build fast, accessible web experiences that feel calm and trustworthy.</h1>
+            <p>
+              I'm <strong>Maya Chen</strong>, a Seoul-based engineer focused on UI architecture, performance, and UX details. I ship pragmatic
+              products with clean code and measurable outcomes.
+            </p>
+
+            <ul class="options">
+              <li><a href="#" class="btn primary">View projects</a></li>
+              <li><a href="#" class="btn">Get in touch</a></li>
+              <li><a href="#" class="btn">Copy email</a></li>
+            </ul>
+
+            <ul class="metrics">
+              <li>
+                <div class="metric">
+                  <div class="metric-header">4+</div>
+                  <div class="metric-details">Years shipping web apps</div>
+                </div>
+              </li>
+              <li>
+                <div class="metric">
+                  <div class="metric-header">30%</div>
+                  <div class="metric-details">Avg. performance lift</div>
+                </div>
+              </li>
+              <li>
+                <div class="metric">
+                  <div class="metric-header">A11y</div>
+                  <div class="metric-details">WCAG-first mindset</div>
+                </div>
+              </li>
+            </ul>
+          </article>
+
+          <!-- Media (right panel) -->
+          <article class="media"></article>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
