Add basic contents and styles for the profile part of the hero media

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       <section class="hero">
         <div class="container hero-content">
           <!-- Summary (left panel) -->
-          <article class="profile">
+          <article class="summary">
             <p class="subtitle">Software Engineer • Frontend + Product-minded</p>
             <h1>I build fast, accessible web experiences that feel calm and trustworthy.</h1>
             <p>
@@ -55,7 +55,7 @@
               <li><a href="#" class="btn">Copy email</a></li>
             </ul>
 
-            <ul class="metrics">
+            <ul class="metric-container">
               <li>
                 <div class="metric">
                   <div class="metric-header">4+</div>
@@ -78,7 +78,23 @@
           </article>
 
           <!-- Media (right panel) -->
-          <article class="media"></article>
+          <article class="media">
+            <img
+              src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=900&q=80"
+              alt="Photo of Maya Chen"
+              loading="lazy"
+              class="portrait"
+            />
+            <div class="profile">
+              <h2>Maya Chen</h2>
+              <p>Software Engineer</p>
+              <ul class="tag-list">
+                <li><span class="tag">React</span></li>
+                <li><span class="tag">TypeScript</span></li>
+                <li><span class="tag">Accessibility</span></li>
+              </ul>
+            </div>
+          </article>
         </div>
       </section>
     </main>
