Add demo videos to the hero media part

--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,24 @@
                 <li><span class="tag">Accessibility</span></li>
               </ul>
             </div>
+            <div class="demo">
+              <div class="demo-header">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="demo-header">Product Demo</span>
+              </div>
+              <iframe
+                src="https://www.youtube.com/embed/FpFEnYgVM4g"
+                title="Demo Video"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="demo-video"
+              ></iframe>
+              <p>Sample embedded video for layout demonstration.</p>
+            </div>
           </article>
         </div>
       </section>
