Add contents for the remaining cards in the projects section

--- a/public/index.html
+++ b/public/index.html
@@ -161,8 +161,40 @@
                 <button class="btn">Ask for a walkthrough</button>
               </div>
             </div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+              <img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?auto=format&fit=crop&w=1200&q=80" alt="Northwind UI Kit" />
+              <div class="card-body">
+                <h3>Northwind UI Kit</h3>
+                <p>A small design system focused on contrast, semantics, and consistent interaction patterns.</p>
+                <ul>
+                  <li>Documented ARIA patterns for common components</li>
+                  <li>Established tokens for spacing, typography, and color</li>
+                  <li>Improved audit score from 82 → 98 (Lighthouse)</li>
+                </ul>
+              </div>
+              <div class="card-footer">
+                <span class="tag">Accessibility</span>
+                <span class="tag">Frontend</span>
+                <button class="btn">Request docs</button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c?auto=format&fit=crop&w=1200&q=80" alt="Streamline ETL Monitor" />
+              <div class="card-body">
+                <h3>Streamline ETL Monitor</h3>
+                <p>A lightweight monitoring page for background jobs: timings, failures, and trend snapshots.</p>
+                <ul>
+                  <li>Normalized event schema for reliable aggregation</li>
+                  <li>Implemented pragmatic alert thresholds and summaries</li>
+                  <li>Made “slow job” causes visible in one click</li>
+                </ul>
+              </div>
+              <div class="card-footer">
+                <span class="tag">Data</span>
+                <span class="tag">Performance</span>
+                <button class="btn">Discuss implementation</button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
