Add basic contents for the skills section

--- a/public/index.html
+++ b/public/index.html
@@ -198,6 +198,58 @@
           </div>
         </div>
       </section>
+
+      <section id="skills" class="skills">
+        <div class="container">
+          <div class="skills-header">
+            <h2>Skills</h2>
+            <p>Strengths in product delivery: quality, collaboration, and maintainability.</p>
+          </div>
+
+          <div class="card-container">
+            <article class="card">
+              <div class="card-body">
+                <h3>Frontend Engineering</h3>
+                <ul>
+                  <li>Semantic HTML, responsive CSS architecture</li>
+                  <li>State management patterns (simple + predictable)</li>
+                  <li>Component design and API ergonomics</li>
+                </ul>
+              </div>
+            </article>
+            <article class="card">
+              <div class="card-body">
+                <h3>Performance</h3>
+                <ul>
+                  <li>Core Web Vitals tuning and measurement</li>
+                  <li>Bundling strategy, caching, image optimization</li>
+                  <li>Profiling, regressions, and guardrails</li>
+                </ul>
+              </div>
+            </article>
+            <article class="card">
+              <div class="card-body">
+                <h3>Accessibility</h3>
+                <ul>
+                  <li>Keyboard navigation and focus management</li>
+                  <li>ARIA usage: intentional, minimal, correct</li>
+                  <li>Color contrast and readable typography</li>
+                </ul>
+              </div>
+            </article>
+          </div>
+
+          <ul class="tag-list">
+            <li><span class="tag">JavaScript</span></li>
+            <li><span class="tag">TypeScript</span></li>
+            <li><span class="tag">React</span></li>
+            <li><span class="tag">Node.js</span></li>
+            <li><span class="tag">REST</span></li>
+            <li><span class="tag">Testing</span></li>
+            <li><span class="tag">Git</span></li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
