Fix the wrong video src link

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                 <span class="demo-header">Product Demo</span>
               </div>
               <iframe
-                src="https://www.youtube.com/embed/FpFEnYgVM4g"
+                src="https://www.youtube.com/embed/CKSBlLFdtlI"
                 title="Demo Video"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
