Fix project cards to use semantic HTML5 article elements

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
           </div>
 
           <div class="card-container">
-            <div class="card">
+            <article class="card">
               <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=80" alt="PulseBoard Analytics" />
               <div class="card-body">
                 <h3>PulseBoard Analytics</h3>
@@ -160,8 +160,8 @@
                 <span class="tag">Performance</span>
                 <button class="btn">Ask for a walkthrough</button>
               </div>
-            </div>
-            <div class="card">
+            </article>
+            <article class="card">
               <img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?auto=format&fit=crop&w=1200&q=80" alt="Northwind UI Kit" />
               <div class="card-body">
                 <h3>Northwind UI Kit</h3>
@@ -177,8 +177,8 @@
                 <span class="tag">Frontend</span>
                 <button class="btn">Request docs</button>
               </div>
-            </div>
-            <div class="card">
+            </article>
+            <article class="card">
               <img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c?auto=format&fit=crop&w=1200&q=80" alt="Streamline ETL Monitor" />
               <div class="card-body">
                 <h3>Streamline ETL Monitor</h3>
@@ -194,7 +194,7 @@
                 <span class="tag">Performance</span>
                 <button class="btn">Discuss implementation</button>
               </div>
-            </div>
+            </article>
           </div>
         </div>
       </section>
