Add the contents & styles for the about section

--- a/public/index.html
+++ b/public/index.html
@@ -250,6 +250,49 @@
           </ul>
         </div>
       </section>
+
+      <!-- About -->
+      <section id="about">
+        <div class="container">
+          <div class="about-header">
+            <h2>About</h2>
+            <p>A short professional summary, written for hiring managers and collaborators.</p>
+          </div>
+          <div class="about-container">
+            <article class="card">
+              <div class="card-body">
+                <h3>How I work</h3>
+                <p>
+                  I prefer small, reversible decisions; clear acceptance criteria; and instrumentation that helps us prove improvements. I keep
+                  codebases tidy with steady refactoring and documentation that engineers actually read.
+                </p>
+                <p>
+                  I collaborate comfortably across design and product, and I’m particularly careful about accessibility and performance because they
+                  compound over time.
+                </p>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-body">
+                <h3>Experience snapshot</h3>
+                <div class="experience">
+                  <span>2023-2025</span>
+                  <span><strong>Product Engineer</strong> - Built internal tools and customer-facing analytics.</span>
+                </div>
+                <div class="experience">
+                  <span>2021-2023</span>
+                  <span><strong>Frontend Developer</strong> - Component libraries, performance work, design systems.</span>
+                </div>
+              </div>
+              <div class="card-footer">
+                <button class="btn primary">Contact</button>
+                <button class="btn">Back to projects</button>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
