Add the contents for the footer

--- a/public/index.html
+++ b/public/index.html
@@ -294,5 +294,11 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="container">
+        <p>&copy; 2026 Maya Chen. Built with plain HTML, CSS, and a little JavaScript.</p>
+      </div>
+    </footer>
   </body>
 </html>
