Refactor layout classes to use .content-wrapper for consistency

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- Header -->
     <header class="site-header">
-      <div class="container header-content">
+      <div class="content-wrapper header-content">
         <!-- Branding -->
         <a href="index.html" class="branding">
           <span class="fullname">Maya Chen</span>
@@ -39,7 +39,7 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <div class="container hero-content">
+        <div class="content-wrapper hero-content">
           <!-- Summary (left panel) -->
           <article class="summary">
             <p class="subtitle">Software Engineer • Frontend + Product-minded</p>
@@ -118,7 +118,7 @@
 
       <!-- Projects -->
       <section id="projects" class="projects">
-        <div class="container">
+        <div class="content-wrapper">
           <div class="projects-header">
             <h2>Selected Projects</h2>
             <p>A few projects that show how I design, implement, and ship.</p>
@@ -200,7 +200,7 @@
       </section>
 
       <section id="skills" class="skills">
-        <div class="container">
+        <div class="content-wrapper">
           <div class="skills-header">
             <h2>Skills</h2>
             <p>Strengths in product delivery: quality, collaboration, and maintainability.</p>
@@ -253,7 +253,7 @@
 
       <!-- About -->
       <section id="about">
-        <div class="container">
+        <div class="content-wrapper">
           <div class="about-header">
             <h2>About</h2>
             <p>A short professional summary, written for hiring managers and collaborators.</p>
@@ -296,7 +296,7 @@
     </main>
 
     <footer>
-      <div class="container">
+      <div class="content-wrapper">
         <p>&copy; 2026 Maya Chen. Built with plain HTML, CSS, and a little JavaScript.</p>
       </div>
     </footer>
