Refactor class names for header and hero section

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- Header -->
     <header class="site-header">
-      <div class="content-wrapper header-content">
+      <div class="content-wrapper site-header-inner">
         <!-- Branding -->
         <a href="index.html" class="branding">
           <span class="fullname">Maya Chen</span>
@@ -39,9 +39,9 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <div class="content-wrapper hero-content">
+        <div class="content-wrapper hero-grid">
           <!-- Summary (left panel) -->
-          <article class="summary">
+          <article>
             <p class="subtitle">Software Engineer • Frontend + Product-minded</p>
             <h1>I build fast, accessible web experiences that feel calm and trustworthy.</h1>
             <p>
@@ -49,13 +49,13 @@
               products with clean code and measurable outcomes.
             </p>
 
-            <ul class="options">
+            <ul class="hero-options">
               <li><a href="#" class="btn primary">View projects</a></li>
               <li><a href="#" class="btn">Get in touch</a></li>
               <li><a href="#" class="btn">Copy email</a></li>
             </ul>
 
-            <ul class="metric-container">
+            <ul class="metric-grid">
               <li>
                 <div class="metric">
                   <div class="metric-header">4+</div>
