--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
         <!-- Navigation -->
         <nav class="site-nav">
           <ul>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#" class="btn">Contact</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="./contact.html" class="btn">Contact</a></li>
           </ul>
         </nav>
 
