--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
             <button class="btn">Clear</button>
           </div>
 
-          <div class="card-container">
+          <div class="card-grid">
             <article class="card">
               <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=80" alt="PulseBoard Analytics" />
               <div class="card-body">
@@ -201,12 +201,12 @@
 
       <section id="skills" class="skills">
         <div class="content-wrapper">
-          <div class="skills-header">
+          <div>
             <h2>Skills</h2>
             <p>Strengths in product delivery: quality, collaboration, and maintainability.</p>
           </div>
 
-          <div class="card-container">
+          <div class="card-grid">
             <article class="card">
               <div class="card-body">
                 <h3>Frontend Engineering</h3>
@@ -258,7 +258,7 @@
             <h2>About</h2>
             <p>A short professional summary, written for hiring managers and collaborators.</p>
           </div>
-          <div class="about-container">
+          <div class="card-grid about">
             <article class="card">
               <div class="card-body">
                 <h3>How I work</h3>
