--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
       </section>
 
       <!-- Projects -->
-      <section id="projects" class="projects">
+      <section id="projects">
         <div class="content-wrapper">
           <div class="projects-header">
             <h2>Selected Projects</h2>
@@ -276,18 +276,20 @@
             <article class="card">
               <div class="card-body">
                 <h3>Experience snapshot</h3>
-                <div class="experience">
-                  <span>2023-2025</span>
-                  <span><strong>Product Engineer</strong> - Built internal tools and customer-facing analytics.</span>
-                </div>
-                <div class="experience">
-                  <span>2021-2023</span>
-                  <span><strong>Frontend Developer</strong> - Component libraries, performance work, design systems.</span>
-                </div>
+                <ul class="experience-list">
+                  <li class="experience">
+                    <span>2023-2025</span>
+                    <span><strong>Product Engineer</strong> - Built internal tools and customer-facing analytics.</span>
+                  </li>
+                  <li class="experience">
+                    <span>2021-2023</span>
+                    <span><strong>Frontend Developer</strong> - Component libraries, performance work, design systems.</span>
+                  </li>
+                </ul>
               </div>
               <div class="card-footer">
-                <button class="btn primary">Contact</button>
-                <button class="btn">Back to projects</button>
+                <a href="contact.html" class="btn primary">Contact</a>
+                <a href="#projects" class="btn">Back to projects</a>
               </div>
             </article>
           </div>
