Add logo to the header section

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
       <div class="content-wrapper site-header-inner">
         <!-- Branding -->
         <a href="index.html" class="branding">
-          <span class="fullname">Maya Chen</span>
+          <div class="logo">
+            <span class="author">MC</span>
+          </div>
+          <span class="autho">Maya Chen</span>
         </a>
 
         <!-- Navigation -->
