Refactor the header style to match the reference page

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           <div class="logo">
             <span class="author">MC</span>
           </div>
-          <span class="autho">Maya Chen</span>
+          <span class="author">Maya Chen</span>
         </a>
 
         <!-- Navigation -->
@@ -27,13 +27,13 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="./contact.html" class="btn">Contact</a></li>
+            <li><a href="./contact.html" class="btn small">Contact</a></li>
           </ul>
         </nav>
 
         <!-- Theme button -->
         <div class="header-action">
-          <button class="btn">Light</button>
+          <button class="btn small ghost">Light</button>
         </div>
       </div>
     </header>
