Refactor the hero summary article style

--- a/public/index.html
+++ b/public/index.html
@@ -45,18 +45,18 @@
         <div class="content-wrapper hero-grid">
           <!-- Summary (left panel) -->
           <article>
-            <p class="subtitle">Software Engineer • Frontend + Product-minded</p>
+            <p class="hero-summary">Software Engineer • Frontend + Product-minded</p>
             <h1>I build fast, accessible web experiences that feel calm and trustworthy.</h1>
-            <p>
+            <p class="hero-description">
               I'm <strong>Maya Chen</strong>, a Seoul-based engineer focused on UI architecture, performance, and UX details. I ship pragmatic
               products with clean code and measurable outcomes.
             </p>
 
-            <ul class="hero-options">
-              <li><a href="#" class="btn primary">View projects</a></li>
-              <li><a href="#" class="btn">Get in touch</a></li>
-              <li><a href="#" class="btn">Copy email</a></li>
-            </ul>
+            <div class="hero-options">
+              <a href="#" class="btn primary">View projects</a>
+              <a href="#" class="btn">Get in touch</a>
+              <button class="btn ghost">Copy email</button>
+            </div>
 
             <ul class="metric-grid">
               <li>
