Refactor the profile section to use figure and figcaption

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Maya Chen" />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Maya Chen - Software Engineer</title>
-    <script src="../js/main.js" defer></script>
+    <!-- <script src="../js/main.js" defer></script> -->
   </head>
   <body>
     <!-- Header -->
@@ -81,22 +81,24 @@
           </article>
 
           <!-- Media (right panel) -->
-          <article class="media">
-            <img
-              src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=900&q=80"
-              alt="Photo of Maya Chen"
-              loading="lazy"
-              class="portrait"
-            />
-            <div class="profile">
-              <h2>Maya Chen</h2>
-              <p>Software Engineer</p>
-              <ul class="tag-list">
-                <li><span class="tag">React</span></li>
-                <li><span class="tag">TypeScript</span></li>
-                <li><span class="tag">Accessibility</span></li>
-              </ul>
-            </div>
+          <article>
+            <figure class="profile">
+              <img
+                src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=900&q=80"
+                alt="Photo of Maya Chen"
+                loading="lazy"
+                class="portrait"
+              />
+              <figcaption class="profile-caption">
+                <h2>Maya Chen</h2>
+                <p>Software Engineer</p>
+                <ul class="tag-list">
+                  <li><span class="tag">React</span></li>
+                  <li><span class="tag">TypeScript</span></li>
+                  <li><span class="tag">Accessibility</span></li>
+                </ul>
+              </figcaption>
+            </figure>
             <div class="demo">
               <div class="demo-header">
                 <span class="dot"></span>
