Refactor demo section for improved semantics and styling

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
-                <span class="demo-header">Product Demo</span>
+                <span class="demo-title">Product Demo</span>
               </div>
               <iframe
                 src="https://www.youtube.com/embed/CKSBlLFdtlI"
@@ -115,7 +115,7 @@
                 allowfullscreen
                 class="demo-video"
               ></iframe>
-              <p>Sample embedded video for layout demonstration.</p>
+              <p class="muted small demo-footer">Sample embedded video for layout demonstration.</p>
             </div>
           </article>
         </div>
