Refactor card component styles and update project descriptions for improved semantics and layout

--- a/public/index.html
+++ b/public/index.html
@@ -154,8 +154,8 @@
               <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=80" alt="PulseBoard Analytics" />
               <div class="card-body">
                 <h3>PulseBoard Analytics</h3>
-                <p>A responsive analytics dashboard with a focus on speed, clarity, and keyboard-first navigation.</p>
-                <ul>
+                <p class="muted">A responsive analytics dashboard with a focus on speed, clarity, and keyboard-first navigation.</p>
+                <ul class="card-list">
                   <li>Reduced LCP by 38% via code-splitting and image strategy</li>
                   <li>Designed reusable UI components with predictable state</li>
                   <li>Built accessible charts with descriptive summaries</li>
@@ -164,15 +164,15 @@
               <div class="card-footer">
                 <span class="tag">Frontend</span>
                 <span class="tag">Performance</span>
-                <button class="btn">Ask for a walkthrough</button>
+                <a href="contact.html" class="btn small ghost">Ask for a walkthrough</a>
               </div>
             </article>
             <article class="card">
               <img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?auto=format&fit=crop&w=1200&q=80" alt="Northwind UI Kit" />
               <div class="card-body">
                 <h3>Northwind UI Kit</h3>
-                <p>A small design system focused on contrast, semantics, and consistent interaction patterns.</p>
-                <ul>
+                <p class="muted">A small design system focused on contrast, semantics, and consistent interaction patterns.</p>
+                <ul class="card-list">
                   <li>Documented ARIA patterns for common components</li>
                   <li>Established tokens for spacing, typography, and color</li>
                   <li>Improved audit score from 82 → 98 (Lighthouse)</li>
@@ -181,15 +181,15 @@
               <div class="card-footer">
                 <span class="tag">Accessibility</span>
                 <span class="tag">Frontend</span>
-                <button class="btn">Request docs</button>
+                <a href="contact.html" class="btn small ghost">Request docs</a>
               </div>
             </article>
             <article class="card">
               <img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c?auto=format&fit=crop&w=1200&q=80" alt="Streamline ETL Monitor" />
               <div class="card-body">
                 <h3>Streamline ETL Monitor</h3>
-                <p>A lightweight monitoring page for background jobs: timings, failures, and trend snapshots.</p>
-                <ul>
+                <p class="muted">A lightweight monitoring page for background jobs: timings, failures, and trend snapshots.</p>
+                <ul class="card-list">
                   <li>Normalized event schema for reliable aggregation</li>
                   <li>Implemented pragmatic alert thresholds and summaries</li>
                   <li>Made “slow job” causes visible in one click</li>
@@ -198,7 +198,7 @@
               <div class="card-footer">
                 <span class="tag">Data</span>
                 <span class="tag">Performance</span>
-                <button class="btn">Discuss implementation</button>
+                <a href="contact.html" class="btn small ghost">Discuss implementation</a>
               </div>
             </article>
           </div>
