Refactor skills section for improved semantics and styling

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
       <!-- Projects -->
       <section id="projects">
         <div class="content-wrapper">
-          <div class="projects-header">
+          <div>
             <h2>Selected Projects</h2>
             <p class="muted">A few projects that show how I design, implement, and ship.</p>
           </div>
@@ -205,18 +205,18 @@
         </div>
       </section>
 
-      <section id="skills" class="skills">
+      <section id="skills">
         <div class="content-wrapper">
           <div>
             <h2>Skills</h2>
-            <p>Strengths in product delivery: quality, collaboration, and maintainability.</p>
+            <p class="muted">Strengths in product delivery: quality, collaboration, and maintainability.</p>
           </div>
 
           <div class="card-grid">
             <article class="card">
               <div class="card-body">
                 <h3>Frontend Engineering</h3>
-                <ul>
+                <ul class="card-list">
                   <li>Semantic HTML, responsive CSS architecture</li>
                   <li>State management patterns (simple + predictable)</li>
                   <li>Component design and API ergonomics</li>
@@ -226,7 +226,7 @@
             <article class="card">
               <div class="card-body">
                 <h3>Performance</h3>
-                <ul>
+                <ul class="card-list">
                   <li>Core Web Vitals tuning and measurement</li>
                   <li>Bundling strategy, caching, image optimization</li>
                   <li>Profiling, regressions, and guardrails</li>
@@ -236,7 +236,7 @@
             <article class="card">
               <div class="card-body">
                 <h3>Accessibility</h3>
-                <ul>
+                <ul class="card-list">
                   <li>Keyboard navigation and focus management</li>
                   <li>ARIA usage: intentional, minimal, correct</li>
                   <li>Color contrast and readable typography</li>
