Refactor styles for card component and enhance about section semantics

--- a/public/index.html
+++ b/public/index.html
@@ -260,9 +260,9 @@
       <!-- About -->
       <section id="about">
         <div class="content-wrapper">
-          <div class="about-header">
+          <div>
             <h2>About</h2>
-            <p>A short professional summary, written for hiring managers and collaborators.</p>
+            <p class="muted">A short professional summary, written for hiring managers and collaborators.</p>
           </div>
           <div class="card-grid about">
             <article class="card">
