--- a/public/index.html
+++ b/public/index.html
@@ -282,18 +282,18 @@
             <article class="card">
               <div class="card-body">
                 <h3>Experience snapshot</h3>
-                <ul class="experience-list">
-                  <li class="experience">
-                    <span>2023-2025</span>
-                    <span><strong>Product Engineer</strong> - Built internal tools and customer-facing analytics.</span>
+                <ul class="experiences">
+                  <li>
+                    <span class="period">2023-2025</span>
+                    <span class="role"><strong>Product Engineer</strong> - Built internal tools and customer-facing analytics.</span>
                   </li>
-                  <li class="experience">
-                    <span>2021-2023</span>
-                    <span><strong>Frontend Developer</strong> - Component libraries, performance work, design systems.</span>
+                  <li>
+                    <span class="period">2021-2023</span>
+                    <span class="role"><strong>Frontend Developer</strong> - Component libraries, performance work, design systems.</span>
                   </li>
                 </ul>
               </div>
-              <div class="card-footer">
+              <div class="about-actions">
                 <a href="contact.html" class="btn primary">Contact</a>
                 <a href="#projects" class="btn">Back to projects</a>
               </div>
@@ -305,7 +305,7 @@
 
     <footer>
       <div class="content-wrapper">
-        <p>&copy; 2026 Maya Chen. Built with plain HTML, CSS, and a little JavaScript.</p>
+        <p class="muted small">&copy; 2026 Maya Chen. Built with plain HTML, CSS, and a little JavaScript.</p>
       </div>
     </footer>
   </body>
