--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
 
         <!-- Navigation -->
         <nav class="site-nav">
-          <ul>
+          <button class="nav-toggle" type="button">
+            <div class="nav-toggle-bar"></div>
+          </button>
+          <ul class="nav-list">
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#about">About</a></li>
@@ -55,7 +58,7 @@
             <div class="hero-options">
               <a href="#" class="btn primary">View projects</a>
               <a href="#" class="btn">Get in touch</a>
-              <button class="btn ghost">Copy email</button>
+              <button class="btn ghost" type="button">Copy email</button>
             </div>
 
             <ul class="metric-grid">
@@ -146,7 +149,7 @@
               </select>
             </label>
 
-            <button class="btn small">Clear</button>
+            <button class="btn small" type="button">Clear</button>
           </div>
 
           <div class="card-grid">
