Add header and navigation structure in contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -9,6 +9,35 @@
     <title>Contact - Maya Chen</title>
   </head>
   <body>
-    <h1>Work In Progress</h1>
+    <!-- Header -->
+    <header class="site-header">
+      <div class="content-wrapper site-header-inner">
+        <!-- Branding -->
+        <a href="index.html" class="branding">
+          <div class="logo">
+            <span class="author">MC</span>
+          </div>
+          <span class="author">Maya Chen</span>
+        </a>
+
+        <!-- Navigation -->
+        <nav class="site-nav">
+          <button class="nav-toggle" type="button">
+            <div class="nav-toggle-bar"></div>
+          </button>
+          <ul class="nav-list">
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="./contact.html" class="btn small">Contact</a></li>
+          </ul>
+        </nav>
+
+        <!-- Theme button -->
+        <div class="header-action">
+          <button class="btn small ghost">Light</button>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
