--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
           <div class="toolbar">
             <label class="field">
               <span class="field-label">Search</span>
-              <input id="project-search" type="text" placeholder="e.g. dashboard, performance, a11y" />
+              <input name="project-search" type="text" placeholder="e.g. dashboard, performance, a11y" />
             </label>
 
             <label class="field">
