Add footer section to contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -88,5 +88,10 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="content-wrapper">
+        <p class="muted small">&copy; 2026 Maya Chen.</p>
+      </div>
+    </footer>
   </body>
 </html>
